--- a/.html
+++ b/.html
@@ -54,7 +54,12 @@
    </form> 
   </section> <!-- Firebase SDK --> 
   <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script> 
-  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore.js"></script> <!-- Custom JS --> 
+  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore.js"></script> 
+  <!-- Custom JS --> 
+  
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/03/22/13/20250322131059-5BGLTUAX.js"></script>
+    
   <script src="script.js"></script> 
  </body>
 </html>
