--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en"> 
  <head> 
   <meta charset="UTF-8"> 
@@ -6,7 +6,9 @@
   <title>LegalHelp</title> 
   <link rel="stylesheet" href="styles.css"> 
  </head> 
- <body> <!-- Navbar --> 
+ <body> 
+
+  <!-- Navbar --> 
   <nav> 
    <div class="logo">
      LegalHelp 
@@ -16,50 +18,68 @@
     <li><a href="#experts">Experts</a></li> 
     <li><a href="#contact">Contact Us</a></li> 
    </ul> 
-  </nav> <!-- Hero Section --> 
+  </nav> 
+
+  <!-- Hero Section --> 
   <header class="hero"> 
    <h1>Your Legal Assistance Hub</h1> 
    <p>Find laws, consult experts, and get legal help.</p> 
-  </header> <!-- Laws Section --> 
+  </header> 
+
+  <!-- Laws Section --> 
   <section id="laws"> 
    <h2>Legal Topics</h2> 
    <div class="law-card"> 
-    <h3>Consumer Rights</h3> <button class="expand-btn">+</button> 
+    <h3>Consumer Rights</h3> 
+    <button class="expand-btn">+</button> 
     <p class="law-text">Consumer rights protect buyers from unfair practices...</p> 
    </div> 
    <div class="law-card"> 
-    <h3>Labor Law</h3> <button class="expand-btn">+</button> 
+    <h3>Labor Law</h3> 
+    <button class="expand-btn">+</button> 
     <p class="law-text">Labor laws govern employment relationships...</p> 
    </div> 
-  </section> <!-- Experts Section --> 
+  </section> 
+
+  <!-- Experts Section --> 
   <section id="experts"> 
-   <h2>Legal Experts<br></h2> 
+   <h2>Legal Experts</h2> 
    <div class="expert-card"> 
-    <img scr="" alt="Lawyer"> 
+    <img src="lawyer1.jpg" alt="Lawyer" width="100px"> 
     <h3>John Doe</h3> 
-    <p>₹300 / Consultation</p> <button class="consult-btn">Consult Now</button> 
+    <p>₹300 / Consultation</p> 
+    <button class="consult-btn">Consult Now</button> 
    </div> 
    <div class="expert-card"> 
-    <img scr="" alt="Lawyer"> 
+    <img src="lawyer2.jpg" alt="Lawyer" width="100px"> 
     <h3>Jane Smith</h3> 
-    <p>₹250 / Consultation</p> <button class="consult-btn">Consult Now</button> 
+    <p>₹250 / Consultation</p> 
+    <button class="consult-btn">Consult Now</button> 
    </div> 
-  </section> <!-- Contact Us Section --> 
+  </section> 
+
+  <!-- Contact Us Section --> 
   <section id="contact"> 
    <h2>Contact Us</h2> 
    <form id="contactForm"> 
     <input type="text" placeholder="Name" required> 
     <input type="email" placeholder="Email" required> 
-    <input type="tel" placeholder="Phone No" required> <textarea placeholder="Your Query" required></textarea> <button type="submit">Submit</button> 
+    <input type="tel" placeholder="Phone No" required> 
+    <textarea placeholder="Your Query" required></textarea> 
+    <button type="submit">Submit</button> 
    </form> 
-  </section> <!-- Firebase SDK --> 
+  </section> 
+
+  <!-- Botpress WebChat -->
+  <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js" defer></script>
+  <script src="https://files.bpcontent.cloud/2025/03/22/13/20250322131059-5BGLTUAX.js" defer></script>
+
+  <!-- Firebase SDK --> 
   <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script> 
   <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore.js"></script> 
-  <!-- Custom JS --> 
   
-    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
-<script src="https://files.bpcontent.cloud/2025/03/22/13/20250322131059-5BGLTUAX.js"></script>
-    
+  <!-- Custom JS --> 
   <script src="script.js"></script> 
+
  </body>
 </html>
